--- a/python_mysql/python_mysql.html
+++ b/python_mysql/python_mysql.html
@@ -7,12 +7,32 @@
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reset.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/black.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/monokai.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/theme/dracula.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/dracula.min.css">
         <style>
-            .green { color: #4CAF50; }
-            .red { color: #f44336; }
-            .orange { color: #ff9800; }
+            .green { color: #50fa7b; }
+            .red { color: #ff5555; }
+            .orange { color: #ffb86c; }
+            .purple { color: #bd93f9; }
+            .pink { color: #ff79c6; }
+            .cyan { color: #8be9fd; }
+
+            /* Hide headers on nested slides (down-level slides) */
+            .reveal .slides section section h2 {
+                display: none;
+            }
+
+            /* Make slides scrollable */
+            .reveal .slides {
+                overflow-y: auto;
+                max-height: 100vh;
+            }
+
+            .reveal .slides section {
+                overflow-y: auto;
+                max-height: 100vh;
+            }
+
             .reveal ul {
                 display: block;
                 text-align: left;
@@ -23,10 +43,27 @@
                 margin-bottom: 0.5em;
             }
             .reveal pre code {
-                max-height: 60vh; /* Limit code block height */
-                overflow-y: auto; /* Enable scrolling for code blocks */
+                max-height: 60vh;
+                overflow-y: auto;
                 padding: 10px;
                 font-size: 0.8em;
+            }
+
+            /* Mobile responsive */
+            @media screen and (max-width: 768px) {
+                .reveal h1 { font-size: 2em; }
+                .reveal h2 { font-size: 1.5em; }
+                .reveal h3 { font-size: 1.2em; }
+                .reveal p, .reveal li { font-size: 0.9em; }
+                .reveal pre code { font-size: 0.7em; }
+            }
+
+            @media screen and (max-width: 480px) {
+                .reveal h1 { font-size: 1.5em; }
+                .reveal h2 { font-size: 1.2em; }
+                .reveal h3 { font-size: 1em; }
+                .reveal p, .reveal li { font-size: 0.8em; }
+                .reveal pre code { font-size: 0.6em; }
             }
         </style>
 	</head>
